fix: page double scroll

--- a/cmd/pst-server/web/index.html
+++ b/cmd/pst-server/web/index.html
@@ -70,7 +70,6 @@
     }
 
     .player-card {
-      height: 100%;
       width: 100%;
       padding: 20px;
     }
@@ -90,7 +89,7 @@
       <mdui-button class="broadcast-btn" id="broadcast" icon="add_alert--rounded">游戏广播</mdui-button>
     </mdui-top-app-bar>
 
-    <mdui-layout-main style="min-height: 300px">
+    <mdui-layout-main>
       <mdui-dialog close-on-overlay-click id="confirm-dialog" headline="确认操作">
         <span class="dialog-description"></span>
         <mdui-button class="dialog-button" id="dialog-confirm">确认</mdui-button>
