--- a/cmd/pst-server/web/index.html
+++ b/cmd/pst-server/web/index.html
@@ -96,8 +96,7 @@
         <mdui-button class="dialog-button" id="dialog-cancel">取消</mdui-button>
       </mdui-dialog>
       <div class="server-info">
-        <span>服务器名称: <span style="font-weight: bold">Unknow</span> 版本: <span style="font-weight: bold">Unknow</span<
-              /span>
+        <span>服务器名称: <span style="font-weight: bold">Unknow</span> 版本: <span style="font-weight: bold">Unknow</span>
       </div>
       <div class="action-buttons">
         <mdui-button id="kick" class="kick-btn" icon="logout--rounded">踢出</mdui-button>
@@ -112,6 +111,7 @@
 
   <script>
     var $ = mdui.$;
+    const adminPassword = "{{.adminPassword}}";
     init();
 
     function init() {
@@ -152,26 +152,32 @@
       const confirmDialog = $("#confirm-dialog")[0];
       const dialogDescription = $(".dialog-description")[0];
       $("#kick, #ban").on("click", function () {
-        let actionType = this.id;
-        let actionUsers = getActionUsers(actionType);
-        if (actionUsers.length === 0) {
-          mdui.snackbar({
-            message: `没有可以${actionType == "kick" ? "踢出" : "封禁"}的玩家`,
+        const authentication = promptInputPassword();
+        authentication.then((result) => {
+          if (!result) {
+            return;
+          }
+          let actionType = this.id;
+          let actionUsers = getActionUsers(actionType);
+          if (actionUsers.length === 0) {
+            mdui.snackbar({
+              message: `没有可以${actionType == "kick" ? "踢出" : "封禁"}的玩家`,
+            })
+            return;
+          }
+          confirmDialog.headline = `确认${actionType == "kick" ? "踢出" : "封禁"}以下玩家?`;
+          let description = "";
+          actionUsers.forEach((user) => {
+            description += `${user.name}\n`;
           })
-          return;
-        }
-        confirmDialog.headline = `确认${actionType == "kick" ? "踢出" : "封禁"}以下玩家?`;
-        let description = "";
-        actionUsers.forEach((user) => {
-          description += `${user.name}\n`;
+          dialogDescription.innerText = description;
+          confirmDialog.open = true;
+          $("#dialog-confirm").on("click", () => {
+            playerAction(actionType, actionUsers);
+            confirmDialog.open = false;
+          });
+          $("#dialog-cancel").on("click", () => (confirmDialog.open = false));
         })
-        dialogDescription.innerText = description;
-        confirmDialog.open = true;
-        $("#dialog-confirm").on("click", () => {
-          playerAction(actionType, actionUsers);
-          confirmDialog.open = false;
-        });
-        $("#dialog-cancel").on("click", () => (confirmDialog.open = false));
       });
 
       const broadcastDialog = $("#broadcast-dialog")[0];
@@ -188,14 +194,37 @@
       ));
     }
 
+    function promptInputPassword() {
+      return mdui.prompt({
+        headline: "需要密码",
+        description: "请输入 AdminPassword 以继续",
+        confirmText: "继续",
+        onConfirm: (password) => {
+          if (password === adminPassword) {
+            return true;
+          }
+          mdui.snackbar({
+            message: "密码错误",
+          });
+          return false;
+        }
+      })
+    }
+
     const refreshBtn = $("#refresh")[0];
     $("#refresh").on("click", () => {
-      refreshBtn.loading = true;
-      const promise = getPlayerList(true);
-      promise.then(() => {
-        refreshBtn.loading = false;
-        mdui.snackbar({
-          message: "玩家列表已刷新",
+      const authentication = promptInputPassword();
+      authentication.then((result) => {
+        if (!result) {
+          return;
+        }
+        refreshBtn.loading = true;
+        const promise = getPlayerList(true);
+        promise.then(() => {
+          refreshBtn.loading = false;
+          mdui.snackbar({
+            message: "玩家列表已刷新",
+          })
         })
       })
     });
